--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <section>
-        <div class="color">
-
-        </div>
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
     </section>
 </body>
 </html>
